--- a/pratical-1/Practical_1_2_(Part_B).ipynb
+++ b/pratical-1/Practical_1_2_(Part_B).ipynb
@@ -262,42 +262,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "id": "DiOoZ-XfH-9-",
-        "outputId": "47f28b97-d5cd-45c2-d530-83d39bbd7f68",
+        "outputId": "ac1be658-a25e-4d17-b8b3-897616b17e47",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 349
         }
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "STEEPEST ASCENT HILL CLIMBING\n",
-            "____________________________________________________________\n",
-            "\n",
-            "\n",
-            "--------- \n",
-            "LEVEL  0 \n",
-            "---------\n",
-            "\tCURRENT NODE:  ['1', '2', '3', '5', '6', '8', '4', '0', '7', 6]\n",
-            "\tOPEN LIST:  [['1', '2', '3', '5', '0', '8', '4', '6', '7', 6], ['1', '2', '3', '5', '6', '8', '0', '4', '7', 6], ['1', '2', '3', '5', '6', '8', '4', '7', '0', 5]]\n",
-            "selected:  ['1', '2', '3', '5', '6', '8', '4', '7', '0', 5]\n",
-            "\n",
-            "--------- \n",
-            "LEVEL  1 \n",
-            "---------\n",
-            "there is no better move\n",
-            "\tCURRENT NODE:  ['1', '2', '3', '5', '6', '8', '4', '7', '0', 5]\n",
-            "\tOPEN LIST:  [['1', '2', '3', '5', '6', '0', '4', '7', '8', 6], ['1', '2', '3', '5', '6', '8', '4', '0', '7', 6]]\n",
-            "\n",
-            " ------------------------------------------------------------\n",
-            "Initial State:  ['1', '2', '3', '5', '6', '8', '4', '0', '7', 6]\n",
-            "Goal State:  ['1', '2', '3', '4', '5', '6', '7', '8', '0', 0]\n",
-            "LOCAL MAXIMUM: There is no solution\n"
-          ]
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'EightPuzzle'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-6-2976453771.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mEightPuzzle\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPuzzle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mp8\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPuzzle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mp8\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msteepestAscentHillClimbing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'EightPuzzle'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
         }
       ],
       "source": [
@@ -338,7 +333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "vX4wcraIH--A"
       },
@@ -386,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "P0754XY0H--A",
         "outputId": "0be86e01-c191-4323-d0d4-d5aaf0cb5f25",
